syntax = "proto3";
option java_multiple_files = true;
package com.example.grpc.server.grpcserver.accessory;

message ProtoAccessory {
    string type = 1;
    string color = 2;
    int32 price = 3;
}

message DeleteRequest {
	string accessory_id = 1;
    string cash_register_id = 2;
}

message DeleteResponse {
    string report = 1;
}

message GetRequest {
}

message GetResponse {
    repeated ProtoAccessory accessories = 1;
}

message CreateRequest {
	ProtoAccessory accessory = 1;
}

message CreateResponse {
    string id = 1;
}

service AccessoryService {
    rpc get(GetRequest) returns (GetResponse);
    rpc delete(DeleteRequest) returns (DeleteResponse);
    rpc create(CreateRequest) returns (CreateResponse);
}

